--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class = "project">
         <div id = "container" class = "svg-container">
           <div id = "title">
-            <h1>Doping In Professional Bycycle Racing</h1>
+            <h1>Doping In Professional Bicycle Racing</h1>
             <h2>35 Fastest times up Alpe d'Huez</h2><br><br>
           </div>
           <div id = "chart"></div>
